refactored gameloop and renderer