@@ -46,37 +46,89 @@ public class Game {
 
     public void loop() {
         boolean isRunning = true;
+        boolean firstDraw = true;
         try {
-            KeyStroke keyStroke;
-            KeyType keyType;
-            ArrayList<KeyStroke> keyStrokes = new ArrayList<>();
-            while(isRunning) {
+        KeyStroke keyStroke;
+        KeyType keyType;
+        ArrayList<KeyStroke> keyStrokes = new ArrayList<>();
+
+        while (isRunning && this.renderer.getScreen() != null) {
+            if(firstDraw) {
                 this.renderer.printMap(this.house.drawMap(), player.getPosition()[1], player.getPosition()[0]);
-                this.renderer.printRoomDescription(this.house.getRoom(player.getPosition()[1], player.getPosition()[0]).getRoomInfo(), 20);
-                while(true) {
-                    keyStroke = this.renderer.getTerminal().readInput();
-                    keyType = keyStroke.getKeyType();
-                    System.out.println("KeyType: " + keyType);
-                    System.out.println("Char: " + keyStroke.getCharacter());
-                    if(keyType == KeyType.Enter) {
-                        break;
-                    }
-                    if(keyStrokes.size() < 40 && keyType == KeyType.Character) {
-                        keyStrokes.add(keyStroke);
-                        this.renderer.printInputLine(keyStrokes);
-                    }
-                    if(!keyStrokes.isEmpty() && keyType == KeyType.Backspace) {
-                        keyStrokes.removeLast();
-                        this.renderer.printInputLine(keyStrokes);
-                    }
-                } 
-                executeInstructions(processKeyStrokes(keyStrokes));
-                keyStrokes.clear();
+                this.renderer.printRoomDescription(
+                    this.house.getRoom(player.getPosition()[1], player.getPosition()[0]).getRoomInfo(), 
+                    20
+                );
                 this.renderer.printInputLine(keyStrokes);
+                this.renderer.renderFrame();
+                firstDraw = false;
             }
-        } catch (IOException e) {
-            System.out.println(e);
+            while (true) {
+                keyStroke = this.renderer.getTerminal().readInput();
+                keyType = keyStroke.getKeyType();
+
+                System.out.println("KeyType: " + keyType);
+                System.out.println("Char: " + keyStroke.getCharacter());
+
+                if (keyType == KeyType.Enter) {
+                    break;
+                }
+
+                if (keyStrokes.size() < 40 && keyType == KeyType.Character) {
+                    keyStrokes.add(keyStroke);
+                } else if (!keyStrokes.isEmpty() && keyType == KeyType.Backspace) {
+                    keyStrokes.removeLast();
+                }
+
+                this.renderer.printInputLine(keyStrokes);
+                this.renderer.renderFrame();
+            }
+
+            executeInstructions(processKeyStrokes(keyStrokes));
+            keyStrokes.clear();
+
+            this.renderer.printMap(this.house.drawMap(), player.getPosition()[1], player.getPosition()[0]);
+            this.renderer.printRoomDescription(this.house.getRoom(player.getPosition()[1], player.getPosition()[0]).getRoomInfo(), 20);
+            this.renderer.printInputLine(keyStrokes);
+            this.renderer.renderFrame();
         }
+
+    } catch (IOException e) {
+        System.out.println("Fehler im Game-Loop:");
+        System.out.println(e);
+    }
+        // boolean isRunning = true;
+        // try {
+        //     KeyStroke keyStroke;
+        //     KeyType keyType;
+        //     ArrayList<KeyStroke> keyStrokes = new ArrayList<>();
+        //     while(isRunning) {
+        //         this.renderer.printMap(this.house.drawMap(), player.getPosition()[1], player.getPosition()[0]);
+        //         this.renderer.printRoomDescription(this.house.getRoom(player.getPosition()[1], player.getPosition()[0]).getRoomInfo(), 20);
+        //         while(true) {
+        //             keyStroke = this.renderer.getTerminal().readInput();
+        //             keyType = keyStroke.getKeyType();
+        //             System.out.println("KeyType: " + keyType);
+        //             System.out.println("Char: " + keyStroke.getCharacter());
+        //             if(keyType == KeyType.Enter) {
+        //                 break;
+        //             }
+        //             if(keyStrokes.size() < 40 && keyType == KeyType.Character) {
+        //                 keyStrokes.add(keyStroke);
+        //                 this.renderer.printInputLine(keyStrokes);
+        //             }
+        //             if(!keyStrokes.isEmpty() && keyType == KeyType.Backspace) {
+        //                 keyStrokes.removeLast();
+        //                 this.renderer.printInputLine(keyStrokes);
+        //             }
+        //         } 
+        //         executeInstructions(processKeyStrokes(keyStrokes));
+        //         keyStrokes.clear();
+        //         this.renderer.printInputLine(keyStrokes);
+        //     }
+        // } catch (IOException e) {
+        //     System.out.println(e);
+        // }
     }
 
     public ArrayList<String> processKeyStrokes(ArrayList<KeyStroke> keyStrokes) throws IOException {
@@ -87,8 +139,7 @@ public class Game {
             stringBuilder.append(keyStroke.getCharacter().toString());
         }
 
-        String command = stringBuilder.toString().toLowerCase();
-        String[] commands = command.split(" ");
+        String[] commands = stringBuilder.toString().toLowerCase().split(" ", 2);
         instructions.addAll(Arrays.asList(commands));
 
         return instructions;
@@ -97,17 +148,8 @@ public class Game {
     public void executeInstructions(ArrayList<String> instructions) throws IOException {
         int value = this.house.getRoom(this.player.getPosition()[1], this.player.getPosition()[0]).getRoomType();
         System.out.println(value);
-        String command = instructions.getFirst();
-        String target = "";
-        if(instructions.size() > 1) {
-            target = instructions.get(1);
-        }
-        if(instructions.size() > 2) {
-            for(int i = 2; i < instructions.size() + 1; i++) {
-                target += " " + instructions.get(i);
-            }
-        }
-        switch (command) {
+        
+        switch (instructions.get(0)) {
             case "exit" -> {            
                 try {
                     datahandler.saveGame(savegame);
@@ -117,7 +159,7 @@ public class Game {
                 System.exit(0);
             }
             case "gehe" -> {
-                switch(target) {
+                switch(instructions.get(1)) {
                     case "nord" -> move(  -1, 0, NORTH, value);
                     case "süd"  -> move(1, 0, SOUTH, value);
                     case "west" -> move(0,   -1,  WEST, value);
@@ -125,8 +167,11 @@ public class Game {
                 }
             }
             case "untersuche" -> {
-                switch(target) {
-                    case "raum" -> this.renderer.printDescription(this.house.getRoom(this.player.getPosition()[1], this.player.getPosition()[0]).getRoomObjects(), 25);
+                switch(instructions.get(1)) {
+                    case "raum" -> {
+                        this.renderer.printDescription(this.house.getRoom(this.player.getPosition()[1], this.player.getPosition()[0]).getRoomObjects(), 25);
+                        this.renderer.renderFrame();
+                    }
                 }
             }
         }
